--- a/roles/base/templates/vimrc.j2
+++ b/roles/base/templates/vimrc.j2
@@ -14,6 +14,10 @@ Plug 'machakann/vim-highlightedyank'
 call plug#end()
 
 let g:airline_theme='{{ airline_theme }}'
+let g:airline#extensions#tabline#enabled = 1 
+let g:airline#extensions#tabline#left_sep = '|' 
+let g:airline#extensions#tabline#formatter = 'unique_tail_improved'                                                                                                                    
+
 let g:conoline_auto_enable = 1
 
 set bg=dark
