adding vim-system-copy to vimrc template

--- a/roles/base/templates/vimrc.j2
+++ b/roles/base/templates/vimrc.j2
@@ -11,6 +11,7 @@ Plug 'itchyny/lightline.vim'
 Plug 'jiangmiao/auto-pairs'
 Plug 'miyakogi/conoline.vim'
 Plug 'machakann/vim-highlightedyank'
+Plug 'christoomey/vim-system-copy'
 call plug#end()
 
 let g:airline_theme='{{ airline_theme }}'
