--- a/roles/base/templates/alias.j2
+++ b/roles/base/templates/alias.j2
@@ -54,6 +54,9 @@ alias sgrep='grep -R -n -H -C 5 --exclude-dir={.git,.svn,CVS} '
 alias t='tail -f'
 alias curl='curl -LIv'
 
+alias rsync='rsync -v'
+alias rsynca='rsync -avz'
+
 # Command line head / tail shortcuts
 alias -g H='| head'
 alias -g T='| tail'
