--- a/roles/base/templates/vimrc.j2
+++ b/roles/base/templates/vimrc.j2
@@ -12,6 +12,7 @@ Plug 'jiangmiao/auto-pairs'
 Plug 'miyakogi/conoline.vim'
 Plug 'machakann/vim-highlightedyank'
 Plug 'christoomey/vim-system-copy'
+Plug 'thaerkh/vim-indentguides'
 call plug#end()
 
 let g:airline_theme='{{ airline_theme }}'
@@ -87,7 +88,7 @@ nnoremap <C-Up> gT
 nnoremap <C-Down> gt
 
 " Toggle line numbers
-nmap <leader>] :set number!<CR>
+nmap <leader>] :set number! <bar> :IndentGuidesToggle<CR>
 
 " Open FZF
 nmap <C-f> :FZF<CR>
