cbpp and alias template tweaks

--- a/roles/base/templates/alias.j2
+++ b/roles/base/templates/alias.j2
@@ -123,6 +123,7 @@ alias ipa='ip -c a'
 alias scss='{{ init_status}}'
 alias scst='{{ init_start }}'
 alias scre='{{ init_restart }}'
+alias ff='fastfetch'
 alias nf='neofetch'
 alias c='{{ bat }}'
 alias cat='{{ bat }}'
