--- a/roles/base/templates/vimrc.j2
+++ b/roles/base/templates/vimrc.j2
@@ -13,6 +13,8 @@ Plug 'miyakogi/conoline.vim'
 Plug 'machakann/vim-highlightedyank'
 Plug 'christoomey/vim-system-copy'
 Plug 'thaerkh/vim-indentguides'
+Plug 'easymotion/vim-easymotion'
+Plug 'jlanzarotta/bufexplorer'
 call plug#end()
 
 let g:airline_theme='{{ airline_theme }}'
@@ -120,3 +122,13 @@ nmap <silent> <C-S-right> :wincmd l<CR>
 " Slim cursor in insert mode
 let &t_SI = "\e[6 q"
 let &t_EI = "\e[2 q"
+
+" Surround the visual selection in parenthesis/brackets/etc.
+vnoremap $1 <esc>`>a)<esc>`<i(<esc>
+vnoremap $2 <esc>`>a]<esc>`<i[<esc>
+vnoremap $3 <esc>`>a}<esc>`<i{<esc>
+vnoremap $$ <esc>`>a"<esc>`<i"<esc>
+vnoremap $q <esc>`>a'<esc>`<i'<esc>
+vnoremap $e <esc>`>a`<esc>`<i`<esc>
+
+map <leader>b :BufExplorer<cr>
