adding to templates

--- a/roles/base/templates/alias.j2
+++ b/roles/base/templates/alias.j2
@@ -111,6 +111,7 @@ mkcd () {
 	cd "$1"
 }
 alias df='df -hT -x squashfs -x tmpfs -x devtmpfs'
+alias free='free -h'
 alias ~='cd ~'
 alias cd..='cd ..'
 alias ..='cd ..'
