--- a/roles/base/templates/vimrc.j2
+++ b/roles/base/templates/vimrc.j2
@@ -15,14 +15,34 @@ Plug 'christoomey/vim-system-copy'
 Plug 'thaerkh/vim-indentguides'
 Plug 'easymotion/vim-easymotion'
 Plug 'jlanzarotta/bufexplorer'
+Plug 'lambdalisue/fern.vim'
+Plug 'lambdalisue/nerdfont.vim'
+Plug 'lambdalisue/fern-renderer-nerdfont.vim'
 call plug#end()
 
 let g:airline_theme='{{ airline_theme }}'
 let g:airline#extensions#tabline#enabled = 1 
-let g:airline#extensions#tabline#left_sep = '|' 
+let g:airline#extensions#tabline#left_sep = '' 
 let g:airline#extensions#tabline#formatter = 'unique_tail_improved'
 
+if !exists('g:airline_symbols')
+  let g:airline_symbols = {}
+endif
+" Airline unicode symbols
+let g:airline_left_sep = ''
+let g:airline_right_sep = ''
 let g:conoline_auto_enable = 1
+
+noremap <silent> <leader>f :Fern . -drawer -toggle <CR>
+function! FernInit() abort
+  nmap <buffer> k <Plug>(fern-action-mark:toggle)
+endfunction
+augroup FernGroup
+  autocmd!
+  autocmd FileType fern call FernInit()
+augroup END
+let g:fern#renderer = "nerdfont"
+let g:fern#drawer_width = 40
 
 set bg=dark
 colorscheme {{ vim_theme }}
@@ -89,7 +109,7 @@ nmap <leader>q :wq<CR>
 nnoremap <C-Up> gT
 nnoremap <C-Down> gt
 
-" Toggle line numbers and indent guides
+" Toggle line numbers
 nmap <leader>] :set number! <bar> :IndentGuidesToggle<CR>
 
 " Open FZF
@@ -98,13 +118,13 @@ nmap <C-f> :FZF<CR>
 " Open NERDTree
 nmap <C-n> :NERDTreeToggle<CR>
 
-" Paste with system clipboard
+" Paste with system clipboard - alias control-i
 nnoremap <S-Insert> <C-i>
 
-" Switch to next buffer
+" Switch to next buffer - alias control-n
 nnoremap <silent> <C-]> :bn<CR>
 
-" Switch to previous buffer
+" Switch to previous buffer - alias control-p
 nnoremap <silent> <C-[> :bp<CR>
 
 " Fast deleting of a buffer
