antix tweaks and fixes

--- a/roles/base/templates/alias.j2
+++ b/roles/base/templates/alias.j2
@@ -54,8 +54,8 @@ alias sgrep='grep -R -n -H -C 5 --exclude-dir={.git,.svn,CVS} '
 alias t='tail -f'
 alias curl='curl -LIv'
 
-alias rsync='rsync -v'
-alias rsynca='rsync -avz'
+alias rs='rsync -v'
+alias rsa='rsync -avz'
 
 # Command line head / tail shortcuts
 alias -g H='| head'
