--- a/roles/arch/templates/alias.j2
+++ b/roles/arch/templates/alias.j2
@@ -131,6 +131,7 @@ alias c='{{ bat }}'
 alias cat='{{ bat }}'
 alias fr='fc-cache -f -v > /dev/null'
 alias curl='curl -LIv'
+alias gap='cd ~/git/ansible_pull'
 
 alias install='sudo {{ pkgmgr_install }}'
 alias search='{{ pkgmgr_search }}'
