--- a/roles/base/templates/alias.j2
+++ b/roles/base/templates/alias.j2
@@ -55,7 +55,7 @@ alias t='tail -f'
 alias curl='curl -LIv'
 
 alias rs='rsync -v'
-alias rsa='rsync -avz'
+alias rsa='rsync -avzP'
 
 # Command line head / tail shortcuts
 alias -g H='| head'
