--- a/roles/arch/templates/zshrc.j2
+++ b/roles/arch/templates/zshrc.j2
@@ -29,7 +29,7 @@ compinit
 
 eval "$(oh-my-posh init zsh --config ~/.poshthemes/{{ omp_theme }}.omp.json)"
 
-export FZF_DEFAULT_COMMAND='fdfind --type f --color=never --hidden'
+export FZF_DEFAULT_COMMAND='{{ fd_package }} --type f --color=never --hidden'
 export FZF_DEFAULT_OPTS="--color=bg+:#343d46,gutter:-1,pointer:#ff3c3c,info:#0dbc79,hl:#0dbc79,hl+:#23d18b --height 60% --border sharp --prompt ':: ' --preview '{{ bat }} --color=always --line-range :50 {}'"
 #export FZF_TMUX="1"
 #export FZF_TMUX_OPTS="-p"
@@ -37,7 +37,7 @@ export FZF_DEFAULT_OPTS="--color=bg+:#343d46,gutter:-1,pointer:#ff3c3c,info:#0db
 export FZF_CTRL_T_COMMAND="$FZF_DEFAULT_COMMAND"
 export FZF_CTRL_T_OPTS="--preview '{{ bat }} --color=always --line-range :50 {}'"
 
-export FZF_ALT_C_COMMAND='fdfind --type d . --color=never --hidden'
+export FZF_ALT_C_COMMAND='{{ fd_package }} --type d . --color=never --hidden'
 export FZF_ALT_C_OPTS="--preview 'eza --tree {} | head -50'"
 
 export FZF_CTRLR_OPTS="--color=bg+:#343d46,gutter:-1,pointer:#ff3c3c,info:#0dbc79,hl:#0dbc79,hl+:#23d18b --height 80% --border sharp --prompt ':: '"
