--- a/roles/base/templates/alias.j2
+++ b/roles/base/templates/alias.j2
@@ -149,7 +149,7 @@ shz() {
 }
 
 sshcopy() {
-  ssh-copy-id -i ~/.ssh/id_rsa.pub z-mh47577@"$1"
+  ssh-copy-id -i ~/.ssh/id_rsa.pub matt@"$1"
 }
 
 
